Endpoint Get subtasks
