# internal/adapter/http/routes.go
@@ -14,5 +14,6 @@ func RegisterRoutes(r *gin.Engine, healthHandler *handlers.HealthHandler, taskHa
 		api.GET("/health", healthHandler.CheckHealth)
 		api.GET("/health/report", healthHandler.CheckHealthReport)
 		api.GET("/tasks", taskHandler.ListRootTasks)
+		api.GET("/tasks/:id/subtasks", taskHandler.ListRootSubTasks)
 	}
 }
